--- a/source/sass/blocks/more-goods.scss
+++ b/source/sass/blocks/more-goods.scss
@@ -7,6 +7,8 @@
     width: 100%;
     margin-right: auto;
     margin-left: auto;
+    justify-content: space-between;
+    align-items: center;
   }
 
   @media (--desktop) {
@@ -20,11 +22,12 @@
   width: 100%;
 
   @media (--not-mobile) {
-    // width: 50%;
+    width: auto;
   }
 }
 
 .more-goods__title {
+  text-transform: uppercase;
   font-family: var(--accent-font);
   font-size: 16px;
   font-weight: 400;
@@ -33,7 +36,7 @@
   width: 100%;
 
   @media (--not-mobile) {
-    // width: 50%;
+    width: auto;
     font-size: 20px;
     line-height: 20px;
   }
@@ -64,13 +67,11 @@
 }
 
 .more-goods__info {
-  // width: 70%;
+
   text-align: left;
 
   @media (--not-mobile) {
-    // width: 30%;
-    text-align: right;
-    margin-left: 30px;
+    margin-right: 50px;
   }
 
   @media (--desktop) {
@@ -79,11 +80,11 @@
 }
 
 .more-goods__value {
-  width: 30%;
+  // width: 30%;
   text-align: right;
 
   @media (--not-mobile) {
-    width: 15%;
+    // width: 15%;
     text-align: right;
   }
 
