--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,8 +1,29 @@
+.form__content-wrapper {
+  @media (--not-mobile) {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  @media (--desktop) {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+
 .form__group-wrapper {
   @media (--desktop) {
     display: grid;
     grid-template-columns: repeat(2, 570px);
     column-gap: 80px;
+  }
+}
+
+.form__group-contacts {
+  width: 100%;
+
+  @media (--not-mobile) {
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 
@@ -15,9 +36,14 @@
   border: none;
   padding: 0;
 
-  &border {
+  &--border {
     border-top: 1px solid #d9d9d9;
     border-bottom: 1px solid #d9d9d9;
+  }
+
+  &--contacts {
+    padding-top: 26px;
+    // padding-bottom: 35px;
   }
 }
 
@@ -29,32 +55,20 @@
   line-height: 18px;
   color: var(--description-color);
   text-transform: uppercase;
+
+  @media (--not-mobile) {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .form__label {
-  display: flex;
-  align-items: center;
   margin-bottom: 12px;
-
-  &--wl {
-    @media (--not-mobile) {
-      padding-top: 25px;
-    }
-  }
-
-  &--doubts {
-    @media (--not-mobile) {
-      padding-bottom: 25px;
-    }
-  }
-}
-
-.form__label--sb {
-  justify-content: space-between;
-
-  @media (--desktop) {
-    justify-content: flex-start;
-  }
+  display: flex;
+  width: 100%;
+  white-space: nowrap;
+  align-items: center;
 }
 
 .form__contacts {
@@ -76,6 +90,10 @@
   padding-bottom: 13px;
   width: 100%;
   margin-left: 15px;
+
+  @media (--desktop) {
+    margin-bottom: 20px;
+  }
 }
 
 .form__filter-radio {
@@ -84,9 +102,20 @@
   border: 0;
   border-top: 1px solid #e7e7e7;
   border-bottom: 1px solid #e7e7e7;
+  padding-top: 20px;
+  padding-bottom: 20px;
 
   @media (--not-mobile) {
-    border: 1 px solid #e7e7e7;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    border-right: 1px solid #e7e7e7;
+    border-left: 1px solid #e7e7e7;
+  }
+
+  @media (--desktop) {
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 69px;
   }
 }
 
@@ -98,13 +127,47 @@
   width: 100%;
 }
 
-.form__add-ons {
-  display: grid;
-  gap: 13px;
+.form__addons-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  @media (--not-mobile) {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(285px, 500px));
+    row-gap: 32px;
+    column-gap: 60px;
+  }
+
+  @media (--desktop) {
+    grid-template-columns: repeat(4, 245px);
+    row-gap: 40px;
+  }
+}
+
+.form__addons-item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
 }
 
 .form__icon-required {
   font-family: var(--main-font); //changed
   font-size: 14px;
   line-height: 16px;
+}
+
+.form__button {
+  width: 100%;
+  height: 40px;
+
+  @media (--not-mobile) {
+    width: 282px;
+    height: 52px;
+  }
+
+  @media (--desktop) {
+    width: 568px;
+    height: 52px;
+  }
 }
