--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -8,7 +8,7 @@
   </a>
 
   <a href="#" class="main-header__title">
-    <img src="../img/logo-text.svg" alt="Cat Energy" width="101" height="19">
+    <img class="main-header__logo-text" src="../img/logo-text.svg" alt="Cat Energy" width="101" height="19">
   </a>
 
   <nav class="main-nav main-nav--closed">
