--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 @import "./blocks/button.scss";
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/main-header.scss";
+@import "./blocks/logo.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/main-promo.scss";
 @import "./blocks/promo.scss";
