--- a/source/sass/blocks/main-promo.scss
+++ b/source/sass/blocks/main-promo.scss
@@ -6,7 +6,7 @@
   @media (--not-mobile) {
     position: relative;
     min-width: 708px;
-    padding-left: 97px;
+    padding-left: 92px;
     align-items: flex-start;
     min-height: 800px;
   }
@@ -31,7 +31,8 @@
     line-height: 60px;
     color: var(--primary-color);
     max-width: 450px;
-    padding-bottom: 41px;
+    padding-bottom: 20px;
+    padding-top: 45px;
   }
 
   @media (--desktop) {
