--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -9,14 +9,14 @@
 }
 
 .page__centerer {
-  margin: 0 20px;
+  padding: 0 20px;
 
   @media (--not-mobile) {
-    margin: 0 30px;
+    padding: 0 30px;
   }
 
   @media (--desktop) {
-    margin: auto;
-    width: 1220px;
+    padding: auto;
+    // width: 1220px;
   }
 }
