--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,9 +1,9 @@
-<header class="main-header page__centerer">
+<header class="main-header page__centerer main-header--nojs">
   <a class="main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
-    <picture class="logo__image">
+    <picture>
       <source media="(min-width: 1280px)" srcset="../img/logo-desktop.svg">
       <source media="(min-width: 768px)" srcset="../img/logo-tablet.svg">
-      <img src="../img/logo-mobile.svg" width="34" height="39" alt="cat energy">
+      <img class="logo__image" src="../img/logo-mobile.svg" width="34" height="39" alt="cat energy">
     </picture>
   </a>
 
@@ -18,7 +18,7 @@
     </button>
     <ul class="main-nav__list">
       {% for page in pages %}
-      <li class="main-nav__item">
+      <li class="main-nav__item {{ permalink==page.path ? 'main-nav__item--current' : '' }}">
         <a class="main-nav__link" href="{{ page.path }}" {% if permalink==page.path %} aria-current="page" {% endif %}>{{ page.name }}</a>
       </li>
       {% endfor %}
