--- a/source/sass/blocks/catalog-button.scss
+++ b/source/sass/blocks/catalog-button.scss
@@ -14,6 +14,15 @@
   box-sizing: border-box;
   text-align: center;
 
+  &:hover {
+    background-color: rgb(94, 170, 47);
+  }
+
+  &:active {
+    background-color: rgb(94, 170, 47);
+    color: rgba(255, 255, 255, 0.3);
+  }
+
 
   &--secondary-color {
     background-color: var(--bg-color-accent);
@@ -22,6 +31,15 @@
     @media (--not-mobile) {
       font-size: 16px;
       font-weight: 400;
+    }
+
+    &:hover {
+      background-color: rgb(235, 235, 235);
+    }
+
+    &:active {
+      background-color: rgb(235, 235, 235);
+      color: rgba(68, 68, 68, 0.3);
     }
   }
 
