--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,5 +1,6 @@
 .logo__image {
   display: block;
+  width: 100%;
 
   @media (--not-mobile) {
     width: 171px;
@@ -11,7 +12,11 @@
     height: 60px;
   }
 
-  img {
-    width: 100%;
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
   }
 }
