--- a/source/sass/blocks/motivation.scss
+++ b/source/sass/blocks/motivation.scss
@@ -17,8 +17,9 @@
     font-size: var(--title-big);
     line-height: 60px;
     font-weight: 400;
-    padding-bottom: 63px;
+    padding-bottom: 51px;
     margin: 0;
+    padding-top: 48px;
   }
 }
 
