--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,27 +1,43 @@
 .programs__list {
-  display: flex;
+  display: grid;
+  row-gap: 20px;
   list-style: none;
-  flex-direction: column;
   padding: 0;
+  margin: 0;
+  margin-bottom: 20px;
+
+  @media (--not-mobile) {
+    min-width: 708px;
+    row-gap: 30px;
+  }
 
   @media (--desktop) {
-    flex-direction: row;
+    grid-template-columns: repeat(auto-fill, minmax(570px, 1fr));
+    column-gap: 80px;
   }
 }
 
 .programs__item {
   background-color: var(--bg-color-accent);
-  padding: 20px;
-  margin-bottom: 20px;
+  padding: 20px 20px;
 
-  @media (--desktop) {
-    width: 50%;
+  @media (--not-mobile) {
+    padding-left: 20px;
+    padding-top: 25px;
 
-    &:first-child {
-      width: calc(50% - 80px);
-      margin-right: 80px;
+    &:last-child {
+      margin-bottom: 0;
     }
   }
+
+  // @media (--desktop) {
+  //   width: 50%;
+
+  //   &:first-child {
+  //     width: calc(50% - 80px);
+  //     margin-right: 80px;
+  //   }
+  // }
 }
 
 .programs__item-wrapper {
@@ -37,14 +53,14 @@
     top: -6px;
     left: 0;
 
-    // @media (--not-mobile) {
-    //   width: 200px;
-    //   height: 200px;
-    //   right: 0;
-    //   left: auto;
-    //   top: 50%;
-    //   transform: translateY(-50%);
-    // }
+    @media (--not-mobile) {
+      width: 200px;
+      height: 200px;
+      right: -291px;
+      left: auto;
+      top: 50%;
+      transform: translateY(-50%);
+    }
   }
 
   &::after {
@@ -60,6 +76,14 @@
     height: 50px;
     top: -7px;
     left: 0;
+
+    @media (--not-mobile) {
+      width: 269px;
+      height: 200px;
+      right: -381px;
+      left: auto;
+      top: 19%;
+    }
   }
 
   &--weight-gain::after {
@@ -68,10 +92,23 @@
     height: 50px;
     top: 7px;
     left: -10px;
+
+    @media (--not-mobile) {
+      width: 269px;
+      height: 200px;
+      right: -320px;
+      left: auto;
+      top: 32%;
+    }
   }
 
   @media (--not-mobile) {
-    max-width: 334px;
+    max-width: 340px;
+    padding-left: 30px;
+  }
+
+  @media (--desktop) {
+    min-width: 467px;
   }
 }
 
@@ -83,12 +120,33 @@
   color: var(--primary-color);
   text-transform: uppercase;
   margin-left: 70px;
+  margin-top: 17px;
 
   @media (--not-mobile) {
     font-size: var(--title-fs);
     line-height: 36px;
     font-weight: 400;
     margin-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  @media (--desktop) {
+    text-align: center;
+  }
+
+  &--slim {
+    @media (--not-mobile) {
+      padding-top: 60px;
+      padding-bottom: 25px;
+    }
+  }
+
+  &--weight {
+    @media (--not-mobile) {
+      padding-top: 45px;
+      padding-bottom: 25px;
+    }
   }
 }
 
@@ -97,13 +155,16 @@
   color: var(--description-color);
   font-size: 14px;
   line-height: 18px;
-  border-bottom: 1px solid var(--bg-page);
+  border-bottom: 1px solid var(--feature-color);
   margin: 0;
   padding-bottom: 20px;
 
   @media (--not-mobile) {
     font-size: 16px;
     line-height: 24px;
+    padding-bottom: 29px;
+    min-width: 340px;
+    border-bottom: none;
   }
 }
 
@@ -115,22 +176,42 @@
   line-height: 16px;
   color: var(--primary-color);
   text-decoration: none;
-  display: block;
+  text-transform: uppercase;
+  display: inline-block;
   margin-top: 20px;
 
   @media (--not-mobile) {
     font-size: 20px;
-    line-height: 29.64px;
+    line-height: 30px;
+    padding-bottom: 55px;
   }
 }
 
-.programs__link--arrow::after {
-  content: "";
-  position: absolute;
-  background-image: url("../../icons/arrow-right.svg");
-  width: 24px;
-  height: 12px;
-  top: 50%;
-  left: 97px;
-  transform: translateY(-50%);
+.programs__link--arrow {
+  &::after {
+    content: "";
+    position: absolute;
+    background-image: url("../../icons/arrow-right.svg");
+    width: 24px;
+    height: 12px;
+    top: 50%;
+    right: -40px;
+    transform: translateY(-50%);
+    transition: all 0.1s linear;
+
+    @media (--not-mobile) {
+      right: -52px;
+    }
+  }
+
+  &:hover::after {
+    background-image: url("../../icons/arrow-long.svg");
+    width: 32px;
+    height: 12px;
+    right: -52px;
+
+    @media (--not-mobile) {
+      right: -64px;
+    }
+  }
 }
