--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -5,13 +5,17 @@
   color: #ffffff;
   text-align: center;
 
+  @media (--not-mobile) {
+    padding-bottom: 40px;
+  }
+
   &::after {
     content: "";
     position: absolute;
     width: 100%;
     top: 0;
     left: 0;
-    height: 250px;
+    height: 300px;
     background-image: url("../../img/m-banner.jpg"), linear-gradient(#65a83d, #62a53b);
     background-size: contain, 100%;
     background-position: top center;
