--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -26,6 +26,14 @@
     padding-top: 10px;
     padding-bottom: 20px;
   }
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 }
 
 .footer__copyright {
@@ -53,13 +61,28 @@
   @media (--not-mobile) {
     margin-right: 22px;
   }
+
+  &:active {
+    color: rgba(68, 68, 68, 0.3);
+  }
 }
 
 .footer__copyright-link {
   display: block;
   text-decoration: none;
-  background-image: url("../../icons/icon-academy-img.svg");
-  background-repeat: no-repeat;
+  mask-image: url("../../icons/icon-academy-img.svg");
+  mask-repeat: no-repeat;
   width: 27px;
   height: 34px;
+  mask-size: 27px 34px;
+  mask-position: center center;
+  background-color: #444444;
+
+  &:hover {
+    background-color: rgb(104, 183, 56);
+  }
+
+  &:active {
+    background-color: rgba(104, 183, 56, 0.3);
+  }
 }
