--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,4 +1,4 @@
-<header class="main-header page__centerer main-header--nojs">
+<header class="main-header page__centerer main-header--no-js">
   <a class="main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
     <picture>
       <source media="(min-width: 1280px)" srcset="../img/logo-desktop.svg">
@@ -23,6 +23,5 @@
       </li>
       {% endfor %}
     </ul>
-
   </nav>
 </header>
