--- a/source/sass/blocks/footer-social.scss
+++ b/source/sass/blocks/footer-social.scss
@@ -35,21 +35,35 @@
 }
 
 .footer-social__link {
-  display: block;
-  text-decoration: none;
-  width: 28px;
-  height: 22px;
-  background-repeat: no-repeat;
+  --fill: #666666;
+
+  &:hover {
+    --fill: rgb(104, 183, 56);
+  }
+
+  &:active {
+    --fill: rgba(104, 183, 56, 0.3);
+  }
 
   &--icon_tw {
-    background-image: url("../../icons/icon-vk.svg");
+    --icon: url("../../icons/icon-tg.svg");
   }
 
   &--icon_yt {
-    background-image: url("../../icons/icon-yt.svg");
+    --icon: url("../../icons/icon-yt.svg");
   }
 
   &--icon_tg {
-    background-image: url("../../icons/icon-tg.svg");
+    --icon: url("../../icons/icon-vk.svg");
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    text-decoration: none;
+    width: 28px;
+    height: 22px;
+    mask: var(--icon) no-repeat center / cover;
+    background-color: var(--fill);
   }
 }
