--- a/source/sass/blocks/motivation.scss
+++ b/source/sass/blocks/motivation.scss
@@ -66,6 +66,7 @@
     @media (--not-mobile) {
       font-size: 14px;
       line-height: 14px;
+      margin-right: 30px;
     }
   }
 
@@ -75,6 +76,7 @@
     line-height: 24px;
     margin: 0;
     border: 1px solid #cdcdcd;
+    text-transform: uppercase;
     border-radius: 3px;
     padding: 15px 15px 18px;
     min-width: 120px;
@@ -84,6 +86,13 @@
     @media (--not-mobile) {
       font-size: 30px;
       line-height: 37px;
+      padding: 15px 55px 25px;
+    }
+
+    &--days {
+      @media (--not-mobile) {
+        padding: 15px 35px 25px;
+      }
     }
   }
 
@@ -115,10 +124,11 @@
 
   @media (--not-mobile) {
     flex-direction: column;
-    margin-left: 167px;
+    margin-left: 159px;
     width: auto;
     margin-top: 0;
     text-transform: uppercase;
+    text-align: right;
   }
 }
 
