--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,6 +7,7 @@
   --accent-color: rgb(104, 183, 56);
   --bg-color-accent: #f2f2f2;
   --feature-color: #d9d9d9;
+  --form-control-color: #cdcdcd;
 
   --title-fs: 36px;
   --title-big: 60px;
