--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -150,6 +150,18 @@
       margin: 0;
     }
   }
+
+  @media (--desktop) {
+    &--index {
+      .main-nav__link {
+        color: var(--secondary-color);
+      }
+
+      &::after {
+        background-color: var(--secondary-color);
+      }
+    }
+  }
 }
 
 .main-nav__link {
@@ -167,10 +179,6 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 24px;
-  }
-
-  @media (--desktop) {
-    color: var(--secondary-color);
   }
 }
 
