--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -15,6 +15,12 @@
     font-weight: 400;
     margin-left: 40px;
   }
+
+  @media (--not-mobile) {
+    margin-left: 7px;
+    padding-top: 50px;
+    padding-bottom: 54px;
+  }
 }
 
 .profile__subtitle {
@@ -34,5 +40,10 @@
     font-weight: 400;
     margin-left: 40px;
     max-width: 380px;
+  }
+
+  @media (--desktop) {
+    margin-left: 7px;
+    margin-bottom: 50px;
   }
 }
