--- a/source/templates/picture.twig
+++ b/source/templates/picture.twig
@@ -10,7 +10,7 @@
         <source
           srcset="
             {%- for dppx in densities -%}
-              img/{{ name }}-{{ vp }}@{{ dppx }}x.{{ format }} {{ dppx }}x{% if dppx != image.maxdppx %}, {% endif %}
+              img/{{ vp }}-{{ name }}@{{ dppx }}x.{{ format }} {{ dppx }}x{% if dppx != image.maxdppx %}, {% endif %}
             {%- endfor -%}
           "
           type="image/{{ format }}"
@@ -21,10 +21,10 @@
       {% else -%}
         <img
           class="{{ class }}"
-          src="img/{{ name }}-{{ vp }}@1x.{{ image.ext }}"
+          src="img/{{ vp }}-{{ name }}@1x.{{ image.ext }}"
           srcset="
             {%- for dppx in densities if dppx != 1 -%}
-              img/{{ name }}-{{ vp }}@{{ dppx }}x.{{ image.ext }} {{ dppx }}x
+              img/{{ vp }}-{{ name }}@{{ dppx }}x.{{ image.ext }} {{ dppx }}x
               {%- if dppx != image.maxdppx -%}, {% endif -%}
             {%- endfor -%}
           "
