--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -70,7 +70,7 @@
 .footer__copyright-link {
   display: block;
   text-decoration: none;
-  mask-image: url("../../icons/icon-academy-img.svg");
+  mask-image: url("../../icons/sprite.svg#academy-img.svg");
   mask-repeat: no-repeat;
   width: 27px;
   height: 34px;
