--- a/source/sass/blocks/principles.scss
+++ b/source/sass/blocks/principles.scss
@@ -98,17 +98,17 @@
 }
 
 .principles__item--greens::before {
-  background-image: url("../../icons/icon_leaf.svg");
+  background-image: url("../../icons/sprite.svg#leaf.svg");
 }
 
 .principles__item--solutable::before {
-  background-image: url("../../icons/icon_glass.svg");
+  background-image: url("../../icons/sprite.svg#glass.svg");
 }
 
 .principles__item--silverwear::before {
-  background-image: url("../../icons/icon_eat.svg");
+  background-image: url("../../icons/sprite.svg#eat.svg");
 }
 
 .principles__item--clock::before {
-  background-image: url("../../icons/icon_alarm.svg");
+  background-image: url("../../icons/sprite.svg#icon_alarm.svg");
 }
