--- a/source/sass/blocks/promotions.scss
+++ b/source/sass/blocks/promotions.scss
@@ -36,7 +36,7 @@
 }
 
 .promotions__icon {
-  background-image: url("../../icons/icon_gift.svg");
+  background-image: url("../../icons/sprite.svg#gift.svg");
   background-repeat: no-repeat;
   width: 78px;
   height: 80px;
