--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -8,20 +8,12 @@
     row-gap: 60px;
     column-gap: 60px;
     grid-template-columns: repeat(auto-fill, minmax(324px, 1fr));
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: space-between;
-    // flex-wrap: wrap;
   }
 
   @media (--desktop) {
     grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
     row-gap: 80px;
     column-gap: 60px;
-    // display: grid;
-    // grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    // grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
-    // column-gap: 80px;
   }
 }
 
@@ -63,13 +55,7 @@
     grid-template-rows: auto auto;
   }
 }
-// flex-direction: column;
-// text-align: center;
-// min-height: 430px;
 
-// display: flex;
-// align-items: center;
-// width: 100%;
 .catalog__link {
   display: block;
   text-decoration: none;
@@ -83,7 +69,6 @@
 }
 
 .catalog__product-photo {
-  // order: -1;
   padding: 14px 36px;
 
   @media (--not-mobile) {
@@ -113,9 +98,7 @@
   }
 
   @media (--desktop) {
-    // grid-template-columns: auto auto;
     min-width: 180px;
-    // justify-content: space-between;
   }
 }
 
@@ -128,13 +111,13 @@
   margin-right: 64px;
 
   @media (--not-mobile) {
-    max-width: 172px;
+    max-width: 145px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 18px;
     font-size: 20px;
     line-height: 24px;
-    // margin: 0;
+    text-align: center;
   }
 }
 
@@ -158,5 +141,21 @@
   @media (--not-mobile) {
     font-size: 16px;
     line-height: 18px;
+  }
+}
+
+.catalog__image {
+  display: block;
+  width: 68px;
+  height: 86px;
+
+  @media (--not-mobile) {
+    width: 161px;
+    height: 172px;
+  }
+
+  @media (--desktop) {
+    width: 172px;
+    height: 196px;
   }
 }
