--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -179,7 +179,35 @@
   }
 }
 
+.form__icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  mask: var(--icon) no repeat right / center;
+  background-color: var(--fill);
+  transition: 0.1s;
+  --fill: #222222;
 
+  &:hover {
+    --fill: rgb(104, 183, 56);
+  }
+
+  &:active {
+    --fill: rgba(104, 183, 56, 0.3);
+  }
+
+  &:focus:invalid {
+    border: 2px solid #ff8282;
+  }
+
+  &--phone {
+    --icon: url("../../icons/sprite.svg#email");
+  }
+
+  &--email {
+    --icon: url("../../icons/sprite.svg#phone");
+  }
+}
 
 .form__filter-radio {
   display: flex;
