--- a/source/sass/blocks/more-goods.scss
+++ b/source/sass/blocks/more-goods.scss
@@ -14,6 +14,7 @@
   @media (--desktop) {
     width: 100%;
     max-width: 896px;
+    padding-top: 17px;
   }
 }
 
@@ -24,6 +25,11 @@
 
   @media (--not-mobile) {
     width: auto;
+  }
+
+  @media (--desktop) {
+    min-width: 300px;
+    white-space: nowrap;
   }
 }
 
