Декоративные элементы внутренних страниц продолжение

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -16,7 +16,7 @@
 }
 
 .contacts__advertisement {
-  font-family: var(--accent-font); //changed
+  font-family: var(--accent-font);
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
