--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -68,6 +68,7 @@
 }
 
 .form__label {
+  position: relative;
   margin-bottom: 12px;
   display: flex;
   width: 100%;
@@ -177,15 +178,13 @@
   &:focus:invalid {
     border: 2px solid #ff8282;
   }
+
+  &:focus:invalid ~ span {
+    --fill: #ff8282;
+  }
 }
 
 .form__icon {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  mask: var(--icon) no repeat right / center;
-  background-color: var(--fill);
-  transition: 0.1s;
   --fill: #222222;
 
   &:hover {
@@ -196,16 +195,25 @@
     --fill: rgba(104, 183, 56, 0.3);
   }
 
-  &:focus:invalid {
-    border: 2px solid #ff8282;
-  }
-
   &--phone {
     --icon: url("../../icons/sprite.svg#email");
   }
 
   &--email {
     --icon: url("../../icons/sprite.svg#phone");
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    right: 20px;
+    width: 20px;
+    height: 20px;
+    mask: var(--icon) no-repeat center / cover;
+    background-color: var(--fill);
+    transition: 0.1s;
   }
 }
 
