--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -3,13 +3,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px 17px;
+  padding: 10px 0 17px;
   flex-wrap: wrap;
 
   @media (--not-mobile) {
     width: auto;
     flex-direction: row;
-    padding: 25px 20px;
+    padding-top: 28px;
   }
 
   @media (--desktop) {
