--- a/source/sass/blocks/main-promo.scss
+++ b/source/sass/blocks/main-promo.scss
@@ -31,8 +31,8 @@
     line-height: 60px;
     color: var(--primary-color);
     max-width: 450px;
-    padding-bottom: 34px;
-    padding-top: 45px;
+    padding-bottom: 36px;
+    padding-top: 48px;
   }
 
   @media (--desktop) {
@@ -48,6 +48,7 @@
   color: var(--secondary-color);
   text-transform: uppercase;
   margin-top: 0;
+  margin-bottom: 25px;
 
   @media (--not-mobile) {
     font-size: 20px;
