--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -28,6 +28,7 @@
 
     &:last-child {
       margin-bottom: 0;
+      padding-bottom: 8px;
     }
   }
 }
@@ -44,16 +45,19 @@
   }
 
   &--slim::before {
-    background-image: url("../../icons/sprite.svg#cat-slim.svg");
+    background-image: url("../../icons/sprite.svg#cat-slim");
     width: 50px;
     height: 53px;
     background-size: 50px 53px;
 
     @media (--not-mobile) {
-      width: 269px;
-      height: 200px;
-      background-size: 269px 200px;
+      width: 200px;
+      height: 211px;
+      background-size: 200px 211px;
       float: right;
+      margin-top: 63px;
+      margin-left: 74px;
+      margin-right: 30px;
     }
 
     @media (--desktop) {
@@ -65,7 +69,7 @@
   }
 
   &--weight-gain::before {
-    background-image: url("../../icons/sprite.svg#cat-fat.svg");
+    background-image: url("../../icons/sprite.svg#cat-fat");
     width: 67px;
     height: 50px;
     background-size: 67px 50px;
@@ -74,9 +78,11 @@
 
     @media (--not-mobile) {
       width: 269px;
-      height: 200px;
-      background-size: 269px 200px;
+      height: 266px;
+      background-size: 264px 333px;
+      background-repeat: no-repeat;
       float: right;
+      margin-left: 25px;
     }
 
     @media (--desktop) {
@@ -88,7 +94,7 @@
   }
 
   @media (--not-mobile) {
-    padding-left: 30px;
+    padding-left: 33px;
   }
 
   @media (--desktop) {
@@ -105,6 +111,7 @@
   text-transform: uppercase;
   margin-left: 70px;
   margin-top: 17px;
+  margin-bottom: 25px;
 
   @media (--not-mobile) {
     font-size: var(--title-fs);
@@ -122,19 +129,13 @@
     padding-top: 77px;
   }
 
-  // &--slim {
-  //   @media (--not-mobile) {
-  //     padding-top: 60px;
-  //     padding-bottom: 25px;
-  //   }
-  // }
-
-  // &--weight {
-  //   @media (--not-mobile) {
-  //     padding-top: 45px;
-  //     padding-bottom: 25px;
-  //   }
-  // }
+  &--weight {
+    @media (--not-mobile) {
+      padding-top: 40px;
+      margin-bottom: 31px;
+      padding-bottom: 0;
+    }
+  }
 }
 
 .programs__description {
