Декоративные элементы внутренних страниц

--- a/source/sass/blocks/catalog-content.scss
+++ b/source/sass/blocks/catalog-content.scss
@@ -14,5 +14,10 @@
     font-size: var(--title-big);
     line-height: 60px;
     border: none;
+    padding-top: 40px;
+  }
+
+  @media (--desktop) {
+    padding-top: 55px;
   }
 }
