--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -12,8 +12,11 @@
   }
 
   @media (--desktop) {
-    grid-template-columns: repeat(auto-fill, minmax(570px, 1fr));
-    column-gap: 80px;
+    grid-template-columns: repeat(2, minmax(574px, 1fr));
+    column-gap: 70px;
+    padding-left: 20px;
+    // grid-template-columns: repeat(auto-fill, minmax(570px, 1fr));
+    // column-gap: 80px;
   }
 }
 
@@ -30,6 +33,10 @@
       margin-bottom: 0;
       padding-bottom: 8px;
     }
+  }
+
+  @media (--desktop) {
+    padding-top: 15px;
   }
 }
 
@@ -65,6 +72,8 @@
       height: 106px;
       background-size: 100px 106px;
       float: left;
+      margin-left: 10px;
+      margin-top: 10px;
     }
   }
 
@@ -86,10 +95,11 @@
     }
 
     @media (--desktop) {
-      width: 134px;
-      height: 100px;
-      background-size: 134px 100px;
+      width: 159px;
+      height: 135px;
+      background-size: 157px 135px;
       float: left;
+      margin-left: 0;
     }
   }
 
