--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -10,6 +10,10 @@
   }
 }
 
+.form__group {
+  border: none;
+}
+
 .form__group-wrapper {
   @media (--desktop) {
     display: grid;
@@ -37,17 +41,52 @@
 
   &--contacts {
     padding-top: 26px;
+  }
 
+  &--comment {
     @media (--desktop) {
-      font-size: var(--title-fs);
-      line-height: 36px;
-      padding-top: 44px;
-      padding-bottom: 63px;
+      margin-bottom: 30px;
+    }
+  }
+
+  &--addons {
+    @media (--desktop) {
+      padding-top: 49px;
     }
   }
 
   @media (--desktop) {
+    font-size: var(--title-fs);
+    line-height: 36px;
+    padding-top: 40px;
+    padding-bottom: 20px;
     margin-bottom: 0;
+  }
+}
+
+.heading {
+  position: relative;
+
+  &::after {
+    content: "";
+    z-index: -2;
+    top: 60px;
+    left: calc(100% + 30px);
+    width: 100vw;
+    height: 2px;
+    background-color: #68b738;
+    position: absolute;
+  }
+
+  &::before {
+    content: "";
+    z-index: -2;
+    right: calc(100% + 30px);
+    top: 60px;
+    width: 100vw;
+    height: 2px;
+    background-color: #68b738;
+    position: absolute;
   }
 }
 
@@ -78,17 +117,16 @@
   @media (--desktop) {
     margin-bottom: 0;
   }
-}
 
-.form__label--radio {
-  display: grid;
-  grid-template-columns: 1.5em auto;
-  gap: 15px;
+  &--radio {
+    display: grid;
+    grid-template-columns: 1.5em auto;
+    gap: 15px;
 
-
-  @media (--not-mobile) {
-    grid-template-columns: 6% auto;
-    gap: 20px;
+    @media (--not-mobile) {
+      grid-template-columns: 6% auto;
+      gap: 20px;
+    }
   }
 }
 
@@ -162,6 +200,7 @@
   width: 100%;
   margin-left: 15px;
   transform: translateY(15%);
+  height: 57px;
 
   @media (--desktop) {
     margin-bottom: 20px;
@@ -196,19 +235,19 @@
   }
 
   &--phone {
-    --icon: url("../../icons/sprite.svg#email");
+    --icon: url("../../icons/sprite.svg#phone");
   }
 
   &--email {
-    --icon: url("../../icons/sprite.svg#phone");
+    --icon: url("../../icons/sprite.svg#email");
   }
 
   &::after {
     content: "";
     position: absolute;
     display: inline-block;
-    top: 50%;
-    right: 20px;
+    top: 33%;
+    right: 15px;
     width: 20px;
     height: 20px;
     mask: var(--icon) no-repeat center / cover;
@@ -221,16 +260,12 @@
   display: flex;
   flex-direction: column;
   border: 0;
-  border-top: 1px solid #e7e7e7;
-  border-bottom: 1px solid #e7e7e7;
   padding-top: 20px;
   padding-bottom: 20px;
 
   @media (--not-mobile) {
     padding-top: 25px;
     padding-bottom: 25px;
-    border-right: 1px solid #e7e7e7;
-    border-left: 1px solid #e7e7e7;
   }
 
   @media (--desktop) {
@@ -239,8 +274,40 @@
   }
 }
 
+.form__filter-wrapper {
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+
+  @media (--not-mobile) {
+    border-right: 1px solid #e7e7e7;
+    border-left: 1px solid #e7e7e7;
+  }
+
+  @media (--desktop) {
+    margin-top: 13px;
+    padding-left: 30px;
+
+    &:first-child {
+      padding-top: 20px;
+    }
+  }
+}
+
+.form__comments {
+  @media (--desktop) {
+    margin-bottom: 43px;
+  }
+}
+
 .form__feedback {
   width: 100%;
+  height: 150px;
+
+  @media (--desktop) {
+    padding-top: 20px;
+    padding-left: 20px;
+    min-height: auto;
+  }
 }
 
 .form__addons-list {
@@ -258,6 +325,8 @@
   @media (--desktop) {
     grid-template-columns: repeat(4, 245px);
     row-gap: 40px;
+    column-gap: 83px;
+    margin-bottom: 40px;
   }
 }
 
@@ -329,7 +398,15 @@
   }
 
   @media (--desktop) {
+    font-style: 20px;
     width: 568px;
     height: 52px;
   }
+}
+
+.form__required-text {
+  margin-left: 20px;
+  font-size: 16px;
+  line-height: 16px;
+  font-family: var(--main-font);
 }
