--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -180,6 +180,11 @@
     font-weight: 400;
     line-height: 24px;
   }
+
+  @media (--desktop) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .main-header--no-js {
