--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -14,6 +14,8 @@
 
   {% block main %}{% endblock %}
 
+  {% include "./contacts.twig" %}
+
   {% include "./footer.twig" %}
 
   <script src="./js/script.js"></script>
